# rag-langgraph-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: dataset.jsonl  run_evals.py
src/rag_agent/: __init__.py  api.py  config.py  embeddings.py  graph.py  ingest.py  retriever.py  vectorstore.py
tests/: test_dataset.py  test_graph.py  test_ingest.py  test_retriever.py  test_streaming.py
