[project]
name = "rag-langgraph-agent"
version = "0.1.0"
description = "Agentic RAG over the LangGraph docs: LangGraph state machine, local-first eval harness, FastAPI service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.7",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
# Without this, the resolver pins opentelemetry-exporter-otlp-proto-grpc to an
# ancient 1.11.1 (while every other otel package is 1.42.x), dragging in a
# protobuf-incompatible opentelemetry-proto that breaks chromadb's import.
override-dependencies = ["opentelemetry-exporter-otlp-proto-grpc>=1.42.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
